--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.6",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
