--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@aspnet/signalr": "^1.0.27",
     "@babel/eslint-parser": "^7.14.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
