--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@fullcalendar/core": "^5.8.0",
+    "@fullcalendar/daygrid": "^5.8.0",
+    "@fullcalendar/interaction": "^5.8.0",
+    "@fullcalendar/timegrid": "^5.8.0",
+    "@fullcalendar/vue": "^5.8.0",
     "@aspnet/signalr": "^1.0.27",
     "@babel/eslint-parser": "^7.14.7",
     "@commitlint/cli": "^12.1.4",
