--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "ant-design-vue": "^1.7.6",
+    "chart.js": "2.7.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
+    "vue-chartjs": "3.4.0",
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
+    "@aspnet/signalr": "^1.0.27",
+    "@babel/eslint-parser": "^7.14.7",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@fullcalendar/core": "^5.8.0",
     "@fullcalendar/daygrid": "^5.8.0",
     "@fullcalendar/interaction": "^5.8.0",
     "@fullcalendar/timegrid": "^5.8.0",
     "@fullcalendar/vue": "^5.8.0",
-    "@aspnet/signalr": "^1.0.27",
-    "@babel/eslint-parser": "^7.14.7",
-    "@commitlint/cli": "^12.1.4",
-    "@commitlint/config-conventional": "^12.1.4",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
