fix: tesiting websocket notification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cSpell.words": [
         "nuxt",
-        "PUID"
+        "PUID",
+        "signalr"
     ],
     "nuxt.isNuxtApp": true
 }
