--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "vue-chartjs": "3.4.0",
+    "vue-html2pdf": "^1.8.0",
     "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
